@@ -1,34 +1,28 @@
 package it.polimi.ingsw.gc12.Controller.ServerController.GameStates;
 
-import com.google.gson.reflect.TypeToken;
 import it.polimi.ingsw.gc12.Controller.ServerController.GameController;
 import it.polimi.ingsw.gc12.Controller.ServerController.ServerController;
 import it.polimi.ingsw.gc12.Controller.ServerController.ServerControllerTest;
 import it.polimi.ingsw.gc12.Listeners.ServerListener;
-import it.polimi.ingsw.gc12.Model.Cards.GoldCard;
-import it.polimi.ingsw.gc12.Model.Cards.InitialCard;
 import it.polimi.ingsw.gc12.Model.Cards.ObjectiveCard;
-import it.polimi.ingsw.gc12.Model.Cards.ResourceCard;
 import it.polimi.ingsw.gc12.Model.Game;
 import it.polimi.ingsw.gc12.Model.Lobby;
 import it.polimi.ingsw.gc12.Model.Player;
+import it.polimi.ingsw.gc12.Model.ServerModel;
 import it.polimi.ingsw.gc12.Network.NetworkSession;
+import it.polimi.ingsw.gc12.Utilities.Exceptions.UnexpectedPlayerException;
 import it.polimi.ingsw.gc12.Utilities.GenericPair;
-import it.polimi.ingsw.gc12.Utilities.JSONParser;
 import it.polimi.ingsw.gc12.Utilities.Side;
-import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 
-import java.util.ArrayList;
 import java.util.UUID;
 
 import static it.polimi.ingsw.gc12.Controller.ServerController.ServerControllerTest.createNetworkSessionStub;
+import static org.junit.jupiter.api.Assertions.assertInstanceOf;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 
 class PlayerTurnPlayStateTest {
-    private static ArrayList<ResourceCard> resourceCards;
-    private static ArrayList<GoldCard> goldCards;
-    private static ArrayList<InitialCard> initialCards;
-    private static ArrayList<ObjectiveCard> objectiveCards;
     Player player1;
     Player player2;
     Lobby lobby;
@@ -37,19 +31,6 @@ class PlayerTurnPlayStateTest {
     NetworkSession client2;
     ServerController server;
     GameController gameController;
-    ChooseObjectiveCardsState state;
-
-    @BeforeAll
-    static void setCardsLists() {
-        resourceCards = JSONParser.deckFromJSONConstructor("resource_cards.json", new TypeToken<>() {
-        });
-        goldCards = JSONParser.deckFromJSONConstructor("gold_cards.json", new TypeToken<>() {
-        });
-        initialCards = JSONParser.deckFromJSONConstructor("initial_cards.json", new TypeToken<>() {
-        });
-        objectiveCards = JSONParser.deckFromJSONConstructor("objective_cards.json", new TypeToken<>() {
-        });
-    }
 
     @BeforeEach
     void setGameParameters() throws Exception {
@@ -66,19 +47,28 @@ class PlayerTurnPlayStateTest {
         client1 = createNetworkSessionStub(gameController);
         client2 = createNetworkSessionStub(gameController);
 
-        gameController.putActivePlayer(client1, game.getPlayers().get(0));
-        gameController.putActivePlayer(client2, game.getPlayers().get(1));
+        gameController.CONTROLLED_GAME.getPlayers().getFirst().addListener(client1.getListener());
+        gameController.CONTROLLED_GAME.getPlayers().getLast().addListener(client2.getListener());
 
-        gameController.placeCard(client1, new GenericPair<>(0,0), game.getPlayers().get(0).getCardsInHand().getFirst().ID, Side.BACK);
-        gameController.placeCard(client2, new GenericPair<>(0,0), game.getPlayers().get(1).getCardsInHand().getFirst().ID, Side.BACK);
+        gameController.putActivePlayer(client1, player1);
+        gameController.putActivePlayer(client1, player1);
 
-        gameController.pickObjective(client1, ((ServerControllerTest.VirtualClientImpl) ((ServerListener) client1.getListener()).getVirtualClient()).myClientController.receivedObjectiveIDs.getFirst());
-        gameController.pickObjective(client2, ((ServerControllerTest.VirtualClientImpl) ((ServerListener) client2.getListener()).getVirtualClient()).myClientController.receivedObjectiveIDs.getFirst());
+        gameController.getCurrentState().placeCard(game.getPlayers().getFirst(), new GenericPair<>(0, 0), game.getPlayers().getFirst().getCardsInHand().getFirst(), Side.FRONT);
+        gameController.getCurrentState().placeCard(game.getPlayers().getLast(), new GenericPair<>(0, 0), game.getPlayers().getLast().getCardsInHand().getFirst(), Side.FRONT);
+
+        int choice1 = ((ServerControllerTest.VirtualClientImpl) ((ServerListener) client1.getListener()).getVirtualClient()).myClientController.receivedObjectiveIDs.getFirst();
+        int choice2 = ((ServerControllerTest.VirtualClientImpl) ((ServerListener) client2.getListener()).getVirtualClient()).myClientController.receivedObjectiveIDs.getFirst();
+
+        gameController.getCurrentState().pickObjective(game.getPlayers().getFirst(), (ObjectiveCard) ServerModel.CARDS_LIST.get(choice1));
+        gameController.getCurrentState().pickObjective(game.getPlayers().getLast(), (ObjectiveCard) ServerModel.CARDS_LIST.get(choice2));
+
+
     }
-/*
+
+
     @Test
     void correctTransitionTest() throws Exception {
-        gameController.getCurrentState().placeCard(game.getPlayers().getFirst(), new GenericPair<>(1, 1), game.getPlayers().getFirst().getCardsInHand().getFirst(), Side.FRONT);
+        gameController.getCurrentState().placeCard(game.getCurrentPlayer(), new GenericPair<>(1, 1), game.getCurrentPlayer().getCardsInHand().getFirst(), Side.FRONT);
         assertInstanceOf(PlayerTurnDrawState.class, gameController.getCurrentState());
     }
 
@@ -92,5 +82,5 @@ class PlayerTurnPlayStateTest {
     void transitionFromDisconnectedPlayerTest() throws Exception {
         gameController.getCurrentState().playerDisconnected(game.getCurrentPlayer());
         assertInstanceOf(PlayerTurnDrawState.class, gameController.getCurrentState());
-    }*/
+    }
 }
