@@ -1,35 +1,31 @@
 package it.polimi.ingsw.gc12.Controller.ServerController.GameStates;
 
-import com.google.gson.reflect.TypeToken;
+import it.polimi.ingsw.gc12.Controller.Commands.ClientCommands.ClientCommand;
+import it.polimi.ingsw.gc12.Controller.Commands.ClientCommands.EndGameCommand;
+import it.polimi.ingsw.gc12.Controller.Commands.ClientCommands.SetLobbiesCommand;
 import it.polimi.ingsw.gc12.Controller.ServerController.GameController;
 import it.polimi.ingsw.gc12.Controller.ServerController.ServerController;
-import it.polimi.ingsw.gc12.Model.Cards.GoldCard;
-import it.polimi.ingsw.gc12.Model.Cards.InitialCard;
+import it.polimi.ingsw.gc12.Controller.ServerController.ServerControllerTest;
+import it.polimi.ingsw.gc12.Listeners.ServerListener;
 import it.polimi.ingsw.gc12.Model.Cards.ObjectiveCard;
-import it.polimi.ingsw.gc12.Model.Cards.ResourceCard;
 import it.polimi.ingsw.gc12.Model.Game;
-import it.polimi.ingsw.gc12.Model.InGamePlayer;
 import it.polimi.ingsw.gc12.Model.Lobby;
 import it.polimi.ingsw.gc12.Model.Player;
+import it.polimi.ingsw.gc12.Model.ServerModel;
 import it.polimi.ingsw.gc12.Network.NetworkSession;
 import it.polimi.ingsw.gc12.Utilities.GenericPair;
-import it.polimi.ingsw.gc12.Utilities.JSONParser;
 import it.polimi.ingsw.gc12.Utilities.Side;
-import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.Map;
+import java.util.List;
 import java.util.UUID;
 
 import static it.polimi.ingsw.gc12.Controller.ServerController.ServerControllerTest.createNetworkSessionStub;
+import static org.junit.jupiter.api.Assertions.assertInstanceOf;
 
 class VictoryCalculationStateTest {
-    private static ArrayList<ResourceCard> resourceCards;
-    private static ArrayList<GoldCard> goldCards;
-    private static ArrayList<InitialCard> initialCards;
-    private static ArrayList<ObjectiveCard> objectiveCards;
+
     Player player1;
     Player player2;
     Lobby lobby;
@@ -40,26 +36,11 @@ class VictoryCalculationStateTest {
     ChooseObjectiveCardsState state;
     GameController gameController;
 
-    @BeforeAll
-    static void setCardsLists() {
-        resourceCards = JSONParser.deckFromJSONConstructor("resource_cards.json", new TypeToken<>() {
-        });
-        goldCards = JSONParser.deckFromJSONConstructor("gold_cards.json", new TypeToken<>() {
-        });
-        initialCards = JSONParser.deckFromJSONConstructor("initial_cards.json", new TypeToken<>() {
-        });
-        objectiveCards = JSONParser.deckFromJSONConstructor("objective_cards.json", new TypeToken<>() {
-        });
-    }
 
     @BeforeEach
     void setGameParameters() throws Exception {
         player1 = new Player("giovanni");
         player2 = new Player("paolo");
-
-        ObjectiveCard[] objectiveCards1 = new ObjectiveCard[]{objectiveCards.get(4), objectiveCards.get(5)};
-        game.setCommonObjectives(objectiveCards1);
-
         UUID lobbyUUID = UUID.randomUUID();
 
         lobby = new Lobby(lobbyUUID, player1, 2);
@@ -71,51 +52,51 @@ class VictoryCalculationStateTest {
         client1 = createNetworkSessionStub(gameController);
         client2 = createNetworkSessionStub(gameController);
 
-        gameController.putActivePlayer(client1, game.getPlayers().get(0));
-        gameController.putActivePlayer(client2, game.getPlayers().get(1));
-        gameController.getCurrentState().transition();
+        gameController.CONTROLLED_GAME.getPlayers().getFirst().addListener(client1.getListener());
+        gameController.CONTROLLED_GAME.getPlayers().getLast().addListener(client2.getListener());
 
-        int i = 0;
-        for (var target : game.getPlayers()) {
-            game.placeCard(target, new GenericPair<>(0, 0), target.getCardsInHand().getFirst(), Side.FRONT);
-            target.addCardToHand(resourceCards.get(i));
-            i++;
-            target.addCardToHand(resourceCards.get(i));
-            target.addCardToHand(goldCards.get(i));
-            i++;
+        gameController.CONTROLLED_GAME.addListener(client1.getListener());
+        gameController.CONTROLLED_GAME.addListener(client2.getListener());
+
+        gameController.putActivePlayer(client1, game.getPlayers().getFirst());
+        gameController.putActivePlayer(client2, game.getPlayers().getLast());
+
+        gameController.getCurrentState().placeCard(game.getPlayers().getFirst(), new GenericPair<>(0, 0), game.getPlayers().getFirst().getCardsInHand().getFirst(), Side.FRONT);
+        gameController.getCurrentState().placeCard(game.getPlayers().getLast(), new GenericPair<>(0, 0), game.getPlayers().getLast().getCardsInHand().getFirst(), Side.FRONT);
+
+        int choice1 = ((ServerControllerTest.VirtualClientImpl) ((ServerListener) client1.getListener()).getVirtualClient()).myClientController.receivedObjectiveIDs.getFirst();
+        int choice2 = ((ServerControllerTest.VirtualClientImpl) ((ServerListener) client2.getListener()).getVirtualClient()).myClientController.receivedObjectiveIDs.getFirst();
+
+        gameController.getCurrentState().pickObjective(game.getPlayers().getFirst(), (ObjectiveCard) ServerModel.CARDS_LIST.get(choice1));
+        gameController.getCurrentState().pickObjective(game.getPlayers().getLast(), (ObjectiveCard) ServerModel.CARDS_LIST.get(choice2));
+
+    }
+
+    @Test
+    void correctTransitionToVictoryCalculationState() throws Exception {
+        game.getCurrentPlayer().increasePoints(20);
+        gameController.getCurrentState().placeCard(game.getCurrentPlayer(), new GenericPair<>(1, 1), game.getCurrentPlayer().getCardsInHand().getFirst(), Side.FRONT);
+        for (int i = 0; i < 7; i++) {
+            gameController.getCurrentState().transition();
         }
 
-        ObjectiveCard[] objectiveCards2 = new ObjectiveCard[]{objectiveCards.get(4), objectiveCards.get(2)};
-        game.setCommonObjectives(objectiveCards2);
+        List<ClientCommand> receivedCommandsListPlayer1 = ((ServerControllerTest.VirtualClientImpl) ((ServerListener) client1.getListener()).getVirtualClient()).receivedCommandsList;
+        List<ClientCommand> receivedCommandsListPlayer2 = ((ServerControllerTest.VirtualClientImpl) ((ServerListener) client2.getListener()).getVirtualClient()).receivedCommandsList;
 
-        Map<InGamePlayer, ArrayList<ObjectiveCard>> objectivesMap = new HashMap<>();
-        ArrayList<ObjectiveCard> obj_a = new ArrayList<>();
-        obj_a.add(objectiveCards.getFirst());
-        obj_a.add(objectiveCards.get(1));
+        assertInstanceOf(EndGameCommand.class, receivedCommandsListPlayer1.get(receivedCommandsListPlayer1.size() - 2));
+        assertInstanceOf(EndGameCommand.class, receivedCommandsListPlayer2.get(receivedCommandsListPlayer2.size() - 2));
 
-        ArrayList<ObjectiveCard> obj_a2 = new ArrayList<>();
-        obj_a2.add(objectiveCards.get(6));
-        obj_a2.add(objectiveCards.get(3));
+        assertInstanceOf(SetLobbiesCommand.class, receivedCommandsListPlayer1.getLast());
+        assertInstanceOf(SetLobbiesCommand.class, receivedCommandsListPlayer2.getLast());
 
-        objectivesMap.put(game.getPlayers().getFirst(), obj_a);
-        objectivesMap.put(game.getPlayers().getLast(), obj_a2);
-
-        game.getPlayers().getFirst().setSecretObjective(obj_a.getFirst());
-        game.getPlayers().getLast().setSecretObjective(obj_a.getFirst());
     }
-/*
-    // TODO: tested with debugger (All run correctly ) , find a way to return the EndGame Command
+
+    //FIXME: questo test è inutile ma non c'e altro modo di testare un metodo che non viene mai chiamato nel flusso di gioco e non fa nulla
     @Test
-    void correctVictoryTest(){
-        game.getPlayers().getFirst().increasePoints(20);
+    void DisconnectPlayer() throws Exception {
+        VictoryCalculationState state = new VictoryCalculationState(gameController, game);
+        state.playerDisconnected(game.getPlayers().getFirst());
+    }
 
-        gameController.getCurrentState().transition();
-        for (int i = 0; i < 6; i++)
-            gameController.getCurrentState().transition();
 
-        gameController.getCurrentState().transition();
-
-        assertInstanceOf(VictoryCalculationState.class, gameController.getCurrentState());
-
-    }*/
 }
